--- a/desafios/d012/index.html
+++ b/desafios/d012/index.html
@@ -25,7 +25,7 @@
         </p> <br>
     </section>
 
-    <section class="imagem">
+    <section class="imagem" id="img1">
     
         <p>
             Não é mais como era antes <br>
@@ -61,7 +61,7 @@
 
    
 
-    <section class="imagem">
+    <section class="imagem" id="img2">
         <p>
             Tenho saudade das cartas <br>
             Escritas com a própria mão <br>
