--- a/exercicios/ex024/iframe001.html
+++ b/exercicios/ex024/iframe001.html
@@ -8,6 +8,19 @@
 </head>
 <body>
     <h1>Testando o uso de um iframe</h1>
-    <p>Acessando o site do CursoemVideo para aprender a programar.</p>
+    <p>Acessando o site do  
+         
+        <iframe src="https://www.cursoemvideo.com" frameborder="0"></iframe>  
+        <a href="https://www.cursoemvideo.com">Curso em Video</a>
+        para aprender a programar.</p>
+    <p>
+        O repositório do Guanabara 
+
+        <iframe src="https://gustavoguanabara.github.io" frameborder="0"></iframe>
+       no <a href="https://gustavoguanabara.github.io"> GitHub</a>
+        também é bem legal
+    </p>
+
+        
 </body>
 </html>
