--- a/exercicios/ex025/form007.html
+++ b/exercicios/ex025/form007.html
@@ -27,11 +27,10 @@
                 <option value="MS">Mato Grosso do Sul</option>
                 <option value="MG">Minas Gerais</option>
                 <option value="PA">Pará</option>
-                <option value=""></option>
                 <option value="PE">Pernambuco</option>
                 <option value="PI">Piauí</option>
                 <option value="RJ">Rio de Janeiro</option>
-                <option value="RN">Rio Grande do Norte</option>
+                <option value="RN">Rio Grande do Norte<option>
                 <option value="RS">Rio Grande do Sul</option>
                 <option value="RO">Rondônia</option>
                 <option value="RR">Roraima</option>
